--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,301 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+*{
+    --color-ligthblue: ##5ad4fa;
+    --color-ligth-orange:##ffd07b;
+    --color-orange-dark:#F86041;
+    --color-pink-dark: #982062;
+    --color-blue: ##b177fc;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+}
+.background{
+    background-image:url(./imagenes/background.jpg);
+    width: 100%;
+    height: 790px;
+    object-fit: cover;
+}
+.home-container{
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 2rem;
+    border: 3px solid white;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    z-index: 0;
+}
+.home-img{
+    width: 40rem;
+    height: 40rem;
+    object-fit: contain;
+    position: absolute;
+    top: 8%;
+    left: 50%; 
+    border-radius: 50%;
+    z-index: 1;
+   
+}
+.home-img-back{
+    display: flex;
+    background-color: white;
+    width: 19rem;
+    height: 19rem;
+    border-radius: 50%;
+    border: 1.7em solid var(--color-orange-dark);
+    position: absolute;
+    top: 30%;
+    left: 61%;
+
+}
+.home-img-back01{
+    display: flex;
+    width: 29rem;
+    height: 29rem;
+    border-radius: 50%;
+    border: 0.2em solid rgba(8, 3, 3, 0.1);
+    position: absolute;
+    top: 21%;
+    left: 57%;
+
+}
+.home-img-back02{
+    display: flex;
+    width: 26rem;
+    height: 26rem;
+    border-radius: 50%;
+    border: 0.1em solid rgba(8, 3, 3, 0.1);
+    position: absolute;
+    top: 25%;
+    left: 59%;
+
+}
+.home-text{
+    font-size: 6rem;
+    font-weight: 400;
+    position: absolute;
+    top: 30%;
+    left: 10%;
+    text-align: start;
+    
+}
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 6rem;
+    position: relative;
+    top: 3%;
+    z-index: 2;
+}
+.navbar-logo-img{
+    width: 7rem;
+    padding-top: 2px;
+}
+.navbar-links{
+    display: flex;
+    gap: 2rem;
+    align-items: center ;
+}
+.navbar-links a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+.navbar-links a:last-child{
+    border: 2px solid var(--color-orange-dark);
+    padding: 1rem;
+    border-radius: 10px;
+}
+/*Courses*/
+.courses-title{
+    font-size: 3rem;
+    text-align: center;
+    position: absolute;
+    top: 20%;
+    left:40%;
+}
+.courses-container{
+    display: flex;
+    position: absolute;
+    top: 35%;
+    left: 8%;
+    gap: 1rem;
+}
+.courses-card{
+    width: 10rem;
+    height: 18rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+.courses-card:hover{
+    transform:scale(1.1);
+
+}
+.courses-name{
+    font-size: 3.5rem;
+    position: absolute;
+    top: 15%;
+}
+.courses-img{
+    width: 2.5rem;
+    position: absolute;
+    top: 45%;
+}
+.courses-nivel{
+    position: absolute;
+    top: 75%;
+    text-align: center;
+
+    
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.card1{
+    border: 5px solid#ffae2a;
+    
+    
+    
 }
-a:hover {
-  color: #535bf2;
+.card2{
+    border: 5px solid#fc5c00
+    
+}
+.card3{
+    border: 5px solid#ff2b6e
+     
+}
+.card4{
+    border: 5px solid#00c9f6
+    
+}
+.card5{
+    border: 5px solid#acf399
+    
+}
+.card6{
+    border: 5px solid#9c99f3
+}
+.card7{
+    border: 5px solid#f0f85d
+}
+/*Testimonials*/
+
+.testimonial-title{
+    position: absolute;
+    top: 15%;
+    left: 38%;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.testimonials{
+    display: grid;
+    grid-template-columns: 48% 48%;
+    gap: 1rem;
+    position: absolute;
+    top: 23%;
+    left: 15%;
+}
+.testimonial-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    gap: 1.5rem;
+    padding: 1rem;
+    border: 2px solid white;
+    border-radius: 1rem;
+}
+.testimonial-img{
+    width: 9rem;
+    height: 8rem;
+    border-radius: 10%;
+    object-fit: contain;
+}
+.testimonial-name{
+    padding: 1rem;
+    text-align: end;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+/*Login*/
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.login-title{
+    display: flex;
+    position: absolute;
+    top: 20%;
+    left: 35%;
+    font-size: 2em;
+}
+.login-subtitle{
+    display: flex;
+    position: absolute;
+    top: 26%;
+    left: 33%;
+    font-size: 1.4em;
+    font-weight: 200;
+}
+.login-subtitle a{
+    padding:  0 10px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.login-container{
+    width: 30rem;
+    height: 20rem;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 40%;
+    left: 30%;
+    border: 4px solid var(--color-pink-dark);
+
+
+}
+.login-logo{
+    width: 5rem;
+    height: 5rem;
+    position: absolute;
+    object-fit: contain;
+    top: -13%;
+    left: 43%;
+}
+.login-input{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 16%;
+    left: 20%;
+}
+input[type='password'],
+input[type='email']{
+    padding: 1rem;
+    margin: 0.5rem;
+    border: none;
+    box-shadow: 5px 5px 5px var(--color-pink-dark);
+}
+input[type='checkbox']{
+    width: 5rem;
+    padding: 1rem;
+    margin: 0.5rem;
+    border: none;
+ 
+}
+.login-submit{
+    width: 30%;
+    padding: 1rem 2rem;
+    background-color: var(--color-orange-dark);
+    position: absolute;
+    top: 80%;
+    left: 38%;
+    border: none;
+    color: white;
+    border-radius: 0.5rem;
 }
