--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,20 @@
     text-align: start;
     
 }
+.home-btn-login{
+    width: 8rem;
+    height: 3rem;
+    position: absolute;
+    top: 55%;
+    left: 25%;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--color-orange-dark);
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    padding-top: 1.2rem ;
+}
 .navbar{
     display: flex;
     justify-content: space-between;
@@ -156,7 +170,6 @@
 
     
 }
-
 .card1{
     border: 5px solid#ffae2a;
     
@@ -186,13 +199,11 @@
     border: 5px solid#f0f85d
 }
 /*Testimonials*/
-
 .testimonial-title{
     position: absolute;
     top: 15%;
     left: 38%;
 }
-
 .testimonials{
     display: grid;
     grid-template-columns: 48% 48%;
@@ -222,24 +233,14 @@
     padding: 1rem;
     text-align: end;
 }
-
-
 /*Login*/
 
 .login-title{
     display: flex;
     position: absolute;
     top: 20%;
-    left: 35%;
+    left: 39%;
     font-size: 2em;
-}
-.login-subtitle{
-    display: flex;
-    position: absolute;
-    top: 26%;
-    left: 33%;
-    font-size: 1.4em;
-    font-weight: 200;
 }
 .login-subtitle a{
     padding:  0 10px;
@@ -252,8 +253,8 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 40%;
-    left: 30%;
+    top: 33%;
+    left: 33%;
     border: 4px solid var(--color-pink-dark);
 
 
@@ -264,7 +265,7 @@
     position: absolute;
     object-fit: contain;
     top: -13%;
-    left: 43%;
+    left: 41%;
 }
 .login-input{
     width: 60%;
@@ -274,14 +275,14 @@
     top: 16%;
     left: 20%;
 }
-input[type='password'],
-input[type='email']{
+.login-input input[type='password'],
+.login-input input[type='email']{
     padding: 1rem;
     margin: 0.5rem;
     border: none;
     box-shadow: 5px 5px 5px var(--color-pink-dark);
 }
-input[type='checkbox']{
+.login-input input[type='checkbox']{
     width: 5rem;
     padding: 1rem;
     margin: 0.5rem;
@@ -294,7 +295,66 @@ input[type='checkbox']{
     background-color: var(--color-orange-dark);
     position: absolute;
     top: 80%;
-    left: 38%;
+    left: 35.5%;
+    border: none;
+    color: white;
+    border-radius: 0.5rem;
+}
+.login-text-password{
+    position: absolute;
+    bottom: 15%;
+    left: 45.5%;
+}
+.signin-title{
+    position: absolute;
+    top: 20%;
+    left: 46%;
+    font-size: 2em;
+}
+.contact-title{
+    font-size: 3em;
+    position: absolute;
+    top: 23%;
+    left:23%;
+}
+.contact-img{
+    width: 50%;
+    position: absolute;
+    top: 25%;
+    left: 45%;
+}
+.contact-container{
+    position: absolute;
+    top: 40%;
+    left: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center ;
+    gap: 0.5rem;
+
+}
+.contact-input{
+    width: 155%;
+    padding: 1rem;
+    border-radius: 3px;
+    border: 2px solid white;
+    background: transparent;
+}
+.contact-textarea{
+    width: 153% ;
+    height: 8rem;
+    border: 2px solid white;
+    background: transparent;
+    padding: 1rem;
+    border-radius: 3px;
+}
+.contact-btn{
+    width: 150%;
+    padding: 1rem 2rem;
+    background-color: var(--color-orange-dark);
+    position: absolute;
+    bottom: -25%;
     border: none;
     color: white;
     border-radius: 0.5rem;
