--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,434 @@
 .background{
     background-image:url(./imagenes/background.jpg);
     width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+.home-container{
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 2rem;
+    border: 3px solid white;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    z-index: 0;
+}
+.home-img{
+    width: 32rem;
+    height: 32rem;
+    object-fit: contain;
+    position: absolute;
+    top: 35%;
+    right: -10%; 
+    z-index: 1;
+   
+}
+.home-img-back{
+    display: flex;
+    background-color: white;
+    width: 22rem;
+    height: 22rem;
+    border-radius: 50%;
+    border: 6px solid var(--color-orange-dark);
+    position: absolute;
+    top: 43%;
+    left: 10%;
+
+}
+.home-img-back01{
+    display: flex;
+    width: 25rem;
+    height:25rem;
+    border-radius: 50%;
+    border: 0.2em solid rgba(8, 3, 3, 0.1);
+    position: absolute;
+    top: 40%;
+    left: 5%;
+
+}
+.home-img-back02{
+    display: flex;
+    width: 27rem;
+    height: 27rem;
+    border-radius: 50%;
+    border: 0.1em solid rgba(8, 3, 3, 0.1);
+    position: absolute;
+    top: 38%;
+    left: 1%;
+
+}
+.home-text{
+    font-size: 4rem;
+    font-weight: 500;
+    position: absolute;
+    top: 13%;
+    left: 12%;
+    
+    
+}
+.home-btn-login{
+    width: 8rem;
+    height: 2rem;
+    position: absolute;
+    top: 27%;
+    left: 40%;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--color-orange-dark);
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    padding-top: 1em ;
+}
+.navbar{
+    display: flex;
+    padding: 0.5rem 1.5rem;
+    position: relative;
+    top: 7%;
+    left: 3%;
+    z-index: 2;
+}
+/*Navbar burguer*/
+
+.nav-icon-5{
+    width: 35px;
+    height: 30px;
+    margin: 5px 5px;
+    position: relative;
+    cursor: pointer;
+    display: inline-block;
+    left:75%;
+   
+    
+  }
+  .nav-icon-5 span{
+    background-color:#fff;
+    position: absolute;
+    border-radius: 1px;
+    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+    width:100%;
+    height: 4px;
+    transition-duration: 500ms
+  }
+  .nav-icon-5 span:nth-child(1){
+    top:0px;
+    left: 0px;
+  }
+  .nav-icon-5 span:nth-child(2){
+    top:13px;
+    left: 0px;
+    opacity:1;
+  }
+  .nav-icon-5 span:nth-child(3){
+    bottom:0px;
+    left: 0px;
+  }
+  .nav-icon-5:not(.open):hover span:nth-child(1){
+    transform: rotate(-3deg) scaleY(1.1);
+  }
+  .nav-icon-5:not(.open):hover span:nth-child(2){
+    transform: rotate(3deg) scaleY(1.1);
+  }
+  .nav-icon-5:not(.open):hover span:nth-child(3){
+    transform: rotate(-4deg) scaleY(1.1);
+  }
+  .nav-icon-5.open span:nth-child(1){
+    transform: rotate(45deg);
+    top: 13px;
+  }
+  .nav-icon-5.open span:nth-child(2){
+    opacity:0;
+  }
+  .nav-icon-5.open span:nth-child(3){
+    transform: rotate(-45deg);
+    top: 13px;
+  }
+.navbar-logo-img{
+    width: 6rem;
+    position: absolute;
+    left: 10%;
+    top: 25%;
+}
+.navbar-links{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: -44rem;
+    left: -125rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+   
+}
+.navbar-links.active{
+    width: 70%;
+    display: block;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    top: 140%;
+    left: -4%;
+    right: 0;
+    text-align: center;
+    background-color: white;
+    border: 3px solid white;
+    border-radius: 1rem;
+    padding: 1rem 1.5rem ;
+}
+.navbar-links a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    cursor: pointer;
+    padding: 1rem;
+}
+.navbar-links a:last-child{
+    width: 70%;
+    border: 2px solid var(--color-orange-dark);
+    padding: 1rem;
+    border-radius: 10px;
+    margin-left: 1.5rem;
+
+}
+
+/*Courses*/
+.courses-title{
+    font-size: 2.2em;
+    text-align: center;
+    position: absolute;
+    top: 20%;
+    left:40%;
+}
+.courses-container{
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    top: 28%;
+    left: 14%;
+    gap: 1rem;
+}
+.courses-card{
+    width: 6rem;
+    height: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+.courses-card:hover{
+    transform:scale(1.1);
+
+}
+.courses-name{
+    font-size: 2rem;
+    
+}
+.courses-img{
+    width: 2rem;
+
+}
+.courses-nivel{
+    font-size: 0.7rem;
+    text-align: center;
+    padding-top: 10px;
+    
+}
+.card1{
+    border: 5px solid#ffae2a;
+    
+    
+    
+}
+.card2{
+    border: 5px solid  #fc5c00
+    }
+.card3{
+    border: 5px solid#ff2b6e
+     
+}
+.card4{
+    border: 5px solid#00c9f6
+    
+}
+.card5{
+    border: 5px solid#acf399
+    
+}
+.card6{
+    border: 5px solid#9c99f3
+}
+.card7{
+    border: 5px solid#f0f85d
+}
+/*Testimonials*/
+
+.testimonial-title{
+    position: absolute;
+    font-size: 1.5rem;
+    top: 15%;
+    left: 30%;
+}
+.testimonials{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    top: 20%;
+    left: 10%;
+}
+.testimonial-container{
+    display: flex;
+    width:80%;
+
+    
+    font-size: 12px;
+    padding: 0.8rem;
+    border: 2px solid white;
+    border-radius: 1rem;
+    
+}
+.testimonial-img{
+ display: none
+}
+.testimonial-name{
+    padding: 1rem;
+    text-align: end;
+}
+
+/*Login*/
+
+.login-title{
+    display: flex;
+    position: absolute;
+    top: 20%;
+    left: 28%;
+    font-size: 1.5em;
+}
+.login-subtitle a{
+    padding:  0 10px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.login-container{
+    width: 20rem;
+    height: 20rem;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 33%;
+    left: 18%;
+    border: 4px solid var(--color-pink-dark);
+
+
+}
+.login-logo{
+    width: 5rem;
+    height: 5rem;
+    position: absolute;
+    object-fit: contain;
+    top: -13%;
+    left: 41%;
+}
+.login-input{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 16%;
+    left: 20%;
+}
+.login-input input[type='password'],
+.login-input input[type='email']{
+    padding: 1rem;
+    margin: 0.5rem;
+    border: none;
+    box-shadow: 5px 5px 5px var(--color-pink-dark);
+}
+.login-input input[type='checkbox']{
+    width: 5rem;
+    padding: 1rem;
+    margin: 0.5rem;
+    border: none;
+ 
+}
+.login-submit{
+    width: 50%;
+    padding: 1rem 2rem;
+    background-color: var(--color-orange-dark);
+    position: absolute;
+    top: 80%;
+    left: 25%;
+    border: none;
+    color: white;
+    border-radius: 0.5rem;
+    
+}
+.login-text-password{
+    position: absolute;
+    bottom: 15%;
+    left: 38%;
+}
+.signin-title{
+    position: absolute;
+    top: 20%;
+    left: 42%;
+    font-size: 2em;
+}
+/*Contact*/
+.contact-title{
+    font-size: 3em;
+    position: absolute;
+    top: 23%;
+    left:23%;
+}
+.contact-img{
+    display: none;
+}
+.contact-container{
+    position: absolute;
+    top: 36%;
+    left: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center ;
+    gap: 0.5rem;
+
+}
+.contact-input{
+    width: 155%;
+    padding: 1rem;
+    border-radius: 3px;
+    border: 2px solid white;
+    background: transparent;
+}
+.contact-textarea{
+    width: 153% ;
+    height: 8rem;
+    border: 2px solid white;
+    background: transparent;
+    padding: 1rem;
+    border-radius: 3px;
+}
+.contact-btn{
+    width: 150%;
+    padding: 1rem 2rem;
+    background-color: var(--color-orange-dark);
+    position: absolute;
+    bottom: -25%;
+    border: none;
+    color: white;
+    border-radius: 0.5rem;
+}
+
+@media (min-width:768px)  {
+.background{
+    background-image:url(./imagenes/background.jpg);
+    width: 100%;
     height: 790px;
     object-fit: cover;
 }
@@ -100,24 +528,35 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem 6rem;
+    padding: 2rem 4rem;
     position: relative;
     top: 3%;
     z-index: 2;
+
 }
 .navbar-logo-img{
-    width: 7rem;
-    padding-top: 2px;
+    width: 9rem;
+    padding-top: 1.5rem;
 }
+.navbar-burguer{
+    display: none
+}
+
 .navbar-links{
-    display: flex;
-    gap: 2rem;
-    align-items: center ;
+    display: block;
+    position: initial;
+    margin: 2rem 6rem 0 0;
+    background-color: transparent;
+  
+    
 }
 .navbar-links a {
     text-decoration: none;
     color: black;
     cursor: pointer;
+    display: inline;
+    margin-left: 2rem;
+    
 }
 .navbar-links a:last-child{
     border: 2px solid var(--color-orange-dark);
@@ -167,41 +606,13 @@
     position: absolute;
     top: 75%;
     text-align: center;
+}
 
-    
-}
-.card1{
-    border: 5px solid#ffae2a;
-    
-    
-    
-}
-.card2{
-    border: 5px solid#fc5c00
-    
-}
-.card3{
-    border: 5px solid#ff2b6e
-     
-}
-.card4{
-    border: 5px solid#00c9f6
-    
-}
-.card5{
-    border: 5px solid#acf399
-    
-}
-.card6{
-    border: 5px solid#9c99f3
-}
-.card7{
-    border: 5px solid#f0f85d
-}
 /*Testimonials*/
 .testimonial-title{
+    font-size: 3rem;
     position: absolute;
-    top: 15%;
+    top: 20%;
     left: 38%;
 }
 .testimonials{
@@ -209,7 +620,7 @@
     grid-template-columns: 48% 48%;
     gap: 1rem;
     position: absolute;
-    top: 23%;
+    top: 33%;
     left: 15%;
 }
 .testimonial-container{
@@ -222,8 +633,10 @@
     padding: 1rem;
     border: 2px solid white;
     border-radius: 1rem;
+    
 }
 .testimonial-img{
+    display: flex;
     width: 9rem;
     height: 8rem;
     border-radius: 10%;
@@ -318,6 +731,7 @@
     left:23%;
 }
 .contact-img{
+    display: flex;
     width: 50%;
     position: absolute;
     top: 25%;
@@ -358,4 +772,5 @@
     border: none;
     color: white;
     border-radius: 0.5rem;
+}
 }
